Revert "Update contact.html"
This reverts commit 10fbfdad543d1842adc0f1c51b75bcedd21e4f15.

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <img class="contact" src="" />
             <h2>Funny title</h2>
             <p>
-                you ever have to contact me below are my eamil and intsgram.
+                If you ever have to contact me below are my eamil and intsgram.
             </p>
 
             <p>
