--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <img class="contact" src="" />
             <h2>Funny title</h2>
             <p>
-                If you ever have to contact me below are my eamil and intsgram.
+                If you ever have to contact me below are my email and instagram.
             </p>
 
             <p>
